--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview --host"
+    "start": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "framer-motion": "^11.18.2",
