--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "start": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "framer-motion": "^11.18.2",
     "lenis": "^1.3.11",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4"
